fix some typos, and add environment.yml

--- a/2021-11-dowhy.ipynb
+++ b/2021-11-dowhy.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Causal inference with DoWhy\n",
     "\n",
-    "Jitao David Zhang, adapted from the quickstart tutorial, November 2021."
+    "Jitao David Zhang, adapted from the [Quickstart tutorial of DoWhy](https://microsoft.github.io/dowhy/example_notebooks/tutorial-causalinference-machinelearning-using-dowhy-econml.html), November 2021."
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: identification\n",
+    "## Step 2: Identification\n",
     "\n",
     "Once both the underlying causal graph is setup and the question of interest is identified (for instance the effect of A on B) during the modelling step, we can proceed to the *identification* step. The goal of *identification* is to check whether the target quantity can be estimated given the observed variables, also known as the identifiability of the model. The check is performed based on the model alone: it has *no need* to access the data itself. In another word, once the model is setup, its identifiability can be checked before the data is observed.\n",
     "\n",
@@ -269,7 +269,7 @@
    "source": [
     "The estimation step builds a statistical estimator that can compute the target estimand identified in the previous step. *DoWhy* implements a few standard etimators, while *EconML*, another package by Microsoft Research focusing on econometrics and economic decision making, implements more estimators that use machine learning.\n",
     "\n",
-    "Below is an example of using Propesity Score Stratification using DoWhy. A propensity score is the probability of a unit being assigned to a treatment given a set of observed covariates. Using them, we can reduce selection bias by equating groups based on covariates."
+    "Below is an example of using Propensity Score Stratification using DoWhy. A propensity score is the probability of a unit being assigned to a treatment given a set of observed covariates. Using them, we can reduce selection bias by equating groups based on covariates."
    ]
   },
   {
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Refuation\n",
+    "## Step 4: Refutation\n",
     "\n",
     "The final step is to check the robustness of the estimate. Given that results of causal inference often cannot be directly validatd, it is critical to refutate the model predictions stringently. The goal is investigate the impacts of assumptions taken during the modelling, identification, and estimation steps on the results. \n",
     "\n",
