--- a/2021-12-CausalSalad.Rmd
+++ b/2021-12-CausalSalad.Rmd
@@ -572,4 +572,162 @@ precis(fbi2)
 
 # The peer bias example
 
-To finish.
+```{r noDisc}
+library(rethinking)
+
+# simulation in which there is no discrimination
+# conditioning on E reveals the truth
+set.seed(1887)
+N <- 500
+X <- rbern(N,prob=0.5)
+pY <- c( 0.25 , 0.05 )
+pE <- X*inv_logit(-2) + (1-X)*inv_logit(+1)
+E <- sapply( 1:N , function(n) sample( 1:2 , size=1 , prob=c(pE[n],1-pE[n]) ) )
+
+p <- pY[E]
+Y <- rbern(N,prob=p)
+
+precis( glm( Y ~ X , family=binomial ) )
+```
+
+```{r}
+precis( glm( Y ~ X + E , family=binomial ) )
+```
+
+
+```{r peer, eval=FALSE}
+
+
+
+mg0 <- glm( Y ~ X , family=binomial )
+mg1 <- glm( Y ~ X + E , family=binomial )
+plot( coeftab( mg0 , mg1 ) , pars="X" )
+
+
+# simulation in which there really is discrimination
+# condition on E hides the truth
+set.seed(1914)
+set.seed(1964)
+N <- 500
+Q <- rnorm(N)
+X <- rbern(N,prob=0.5)
+pY <- c( 0.25 , 0.1 )
+pE <- X*inv_logit(Q-2) + (1-X)*inv_logit(Q+1)
+E <- sapply( 1:N , function(n) sample( 1:2 , size=1 , prob=c(pE[n],1-pE[n]) ) )
+
+p <- inv_logit( logit(pY[E]) + Q - X )
+Y <- rbern(N,prob=p)
+
+precis( glm( Y ~ X , family=binomial ) )
+
+precis( glm( Y ~ X + E , family=binomial ) )
+
+precis( glm( Y ~ X + E + Q , family=binomial ) )
+
+mg0 <- glm( Y ~ X , family=binomial )
+mg1 <- glm( Y ~ X + E , family=binomial )
+mg2 <- glm( Y ~ X + E + Q , family=binomial )
+plot( coeftab( mg0 , mg1 ) , pars="X" )
+
+# descendants of Q
+R1 <- rnorm(N,0.5*Q)
+R2 <- rnorm(N,0.5*Q)
+
+mg3 <- glm( Y ~ X + E + R1 + R2 , family=binomial )
+precis( mg3 )
+plot( coeftab( mg0 , mg1 , mg3 ) , pars="X" )
+
+# bayes model
+dat <- list( Y=Y , E=E , XX=X , id=1:N , R1=R1 , R2=R2 )
+mR <- ulam(
+    alist(
+        # Y model
+        Y ~ bernoulli(p),
+        logit(p) <- a[E] + X*XX + h*Q[id],
+        a[E] ~ normal(0,1),
+        X ~ normal(0,1),
+        h ~ half_normal(0,1),
+        # Q model
+        vector[id]:Q ~ normal(0,1),
+        R1 ~ normal(Q,1),
+        R2 ~ normal(Q,1)
+    ) , data=dat , chains=4 , cores=4 , cmdstan=TRUE )
+
+precis(mR,2,omit="Q")
+
+plot( coeftab( mg0 , mg1 , mg3 , mR ) , pars="X" )
+
+post <- extract.samples(mR)
+Qest <- apply(post$Q,2,mean)
+blank()
+plot(Q,Qest)
+abline(a=0,b=1,lty=2)
+
+# confounded but we do a partial identification analysis
+# we use an informative prior for h (effect of Q)
+
+dat2 <- list( Y=Y , E=E , I=I , id=1:N )
+
+m2 <- ulam(
+    alist(
+        # Y model
+        Y ~ bernoulli(p),
+        logit(p) <- a[E] + g*X + h*Q[id],
+        a[E] ~ normal(0,1),
+        g ~ normal(0,1),
+        h ~ uniform(0,2),
+        # Q model
+        vector[id]:Q ~ normal(0,1)
+    ) , data=dat2 , chains=4 , cores=4 )
+
+precis(m2,2,omit="Q")
+
+post <- extract.samples(m2)
+
+plot( post$h , post$g , pch=16 , col=grau(0.2) , cex=2 , ylab="effect of I" , xlab="effect of Q" )
+abline(h=0,lty=2)
+
+quantile(post$h)
+
+############################
+# d-separation plots
+a <- 0.7
+cols <- c( col.alpha(1,a) , col.alpha(2,a) )
+
+# pipe
+
+N <- 1000
+X <- rnorm(N)
+Z <- rbern(N,inv_logit(X))
+Y <- rnorm(N,(2*Z-1))
+
+plot( X , Y , col=cols[Z+1] , pch=16 )
+abline(lm(Y[Z==1]~X[Z==1]),col=2,lwd=3)
+abline(lm(Y[Z==0]~X[Z==0]),col=1,lwd=3)
+abline(lm(Y~X),lwd=3,lty=3)
+
+# fork
+
+N <- 1000
+Z <- rbern(N)
+X <- rnorm(N,2*Z-1)
+Y <- rnorm(N,(2*Z-1))
+
+plot( X , Y , col=cols[Z+1] , pch=16 )
+abline(lm(Y[Z==1]~X[Z==1]),col=2,lwd=3)
+abline(lm(Y[Z==0]~X[Z==0]),col=1,lwd=3)
+abline(lm(Y~X),lwd=3,lty=3)
+
+# collider
+
+N <- 1000
+X <- rnorm(N)
+Y <- rnorm(N)
+Z <- rbern(N,inv_logit(2*X+2*Y-2))
+
+plot( X , Y , col=cols[Z+1] , pch=16 )
+abline(lm(Y[Z==1]~X[Z==1]),col=2,lwd=3)
+abline(lm(Y[Z==0]~X[Z==0]),col=1,lwd=3)
+abline(lm(Y~X),lwd=3,lty=3)
+```
+
