--- a/2021-12-CausalSalad.Rmd
+++ b/2021-12-CausalSalad.Rmd
@@ -5,7 +5,7 @@ date: "29/11/2021"
 output: html_document
 ---
 
-This document walks through the models introduced in the causal inference workshop given by Richard McElreath.
+This document walks through the models introduced in the causal inference workshop given by Richard McElreath, to whom the credit should go to. I have twisted the models from time to time to make sure that I understand how they work. All errors and mistakes are my responsibility.
 
 * [The workshop, Science Before Statistics: Causal Inference](https://www.youtube.com/watch?v=KNPYUVmY3NM&t=2084s)
 * [The original R script posted on GitHub](https://github.com/rmcelreath/causal_salad_2021/blob/main/1_causal_salad.r)
@@ -27,7 +27,7 @@ library(gridExtra)
 ggplot2::theme_set(theme_minimal(base_size=14))
 ```
 
-# Basics
+# The basics
 
 ## The simplest relation: two variables, one causing the other
 
@@ -391,6 +391,8 @@ print(ldmodPlot)
 
 # The two moms example
 
+We consider the problem of estimating causal effect of mom's family size on daughter's family size. The data we have are a large number of pairs of moms and daughters, their family size, and the birth orders (which we assume by prior knowledge or our believe is a factor that affects family size).
+
 ```{r, fig.height=3, fig.width=3}
 tm <- dagitty("dag {
               B1 -> M ;
@@ -534,6 +536,7 @@ precis(fbi_plus,3)
 ```
 
 Below is a more exotic example, where there is no instrument variable (B1 -> D), but two measures of U (V and W)
+
 ```{r}
 set.seed(1887)
 N <- 200 # number of pairs
@@ -572,39 +575,75 @@ precis(fbi2)
 
 # The peer bias example
 
-```{r noDisc}
-library(rethinking)
+We next consider the problem of peer bias. The data are a large set of applications submitted by individuals, the categories of applicants which may be subject to discrimination (e.g. gender, racial groups), the fields of applications, and the success and failure of the applications. We are interested in the question whether is there discrimination by category.
 
-# simulation in which there is no discrimination
+Assume we have the following model, which was explained at 43:58, 1:16:30, and 2:37:46 of the [recorded talk *Science Before Statistics: Causal Inference*, available on YouTube](https://www.youtube.com/watch?v=KNPYUVmY3NM&t=9174s).
+
+* `X`: social categories which we cannot intervene, for instance gender and racial groups.
+* `E`: fields of applications that are affected by the social categories. For instance, if it is about study disciplines, physics and psychology may represent different fields. Individuals from different social categories (gender for instance) may have different preferences of `E`.
+* `Y`: outcome of application, success or failure. It is potentially influenced by both `X` (which may represent discrimination) and `Y` (which reflects the varying opportunities between fields).
+
+There can be confounder in the model, especially a latent variable `Q` that embodies quality of the applicants, i.e. their suitability for the field. It is  difficult or impossible to measure, however it influences both the subject the applicant chooses (`E`) and the outcome of application (`Y`). Though it is difficult to measure, we may have proxy variables, for instance grades, reference letters, that are influenced by `Q`.
+
+```{r peerBiasSetup}
+library(rethinking)
+```
+
+## A simulation study without discrimination
+
+```{r peerBias}
+# simulation in which there is *no* discrimination
 # conditioning on E reveals the truth
 set.seed(1887)
-N <- 500
-X <- rbern(N,prob=0.5)
+N <- 500 ## 500 individuals
+X <- rbern(N,prob=0.5) ## two social categories, 0 and 1
 pY <- c( 0.25 , 0.05 )
-pE <- X*inv_logit(-2) + (1-X)*inv_logit(+1)
+pE <- X*inv_logit(-2) + (1-X)*inv_logit(+1) ## the social category affects field of choice
 E <- sapply( 1:N , function(n) sample( 1:2 , size=1 , prob=c(pE[n],1-pE[n]) ) )
+```
 
+To better see that X affects E, we check the contingency table below:
+
+* For `X=0`, the probability of choosing `E=1` is about 2.2 fold higher than choosing `E=2`
+* For `X=1`, the probability of choosing `E=2` is about 7 fold higher than choosing `E=1`.
+
+```{r peerBiasContingencyTable}
+table(X, E)
+```
+
+Here we assume that there is no discrimination: Y is determined only by E. 
+
+```{r peerY}
 p <- pY[E]
 Y <- rbern(N,prob=p)
+```
 
+However, logistic regression using `X` as variable returns a non-zero coefficient.
+
+```{r peerYX}
 precis( glm( Y ~ X , family=binomial ) )
 ```
 
-```{r}
+Compare the model above with another logistic regression model conditional on both `X` and `E`: in the later model, the coefficient of `X` overlaps with zero. We conclude from the comparison that the effect of `X` is likely mediated by `E`.
+
+```{r peerXE}
 precis( glm( Y ~ X + E , family=binomial ) )
 ```
 
 
-```{r peer, eval=FALSE}
+```{r peerModelSideBySide}
 mg0 <- glm( Y ~ X , family=binomial )
 mg1 <- glm( Y ~ X + E , family=binomial )
-plot( coeftab( mg0 , mg1 ) , pars="X" )
+plot( coeftab( mg0 , mg1 ), pars="X" )
+```
 
+## A simulation study with discrimination and latent variable
 
+Now we simulate a situation there is both discrimination and latent variable `Q`.
+
+```{r discrimination}
+set.seed(1887)
 # simulation in which there really is discrimination
-# condition on E hides the truth
-set.seed(1914)
-set.seed(1964)
 N <- 500
 Q <- rnorm(N)
 X <- rbern(N,prob=0.5)
@@ -612,31 +651,48 @@ pY <- c( 0.25 , 0.1 )
 pE <- X*inv_logit(Q-2) + (1-X)*inv_logit(Q+1)
 E <- sapply( 1:N , function(n) sample( 1:2 , size=1 , prob=c(pE[n],1-pE[n]) ) )
 
+## Y is determined by E, Q, and X
 p <- inv_logit( logit(pY[E]) + Q - X )
 Y <- rbern(N,prob=p)
+```
 
-precis( glm( Y ~ X , family=binomial ) )
+The horrifying obesrvation is that now if we include both `X` and `E` in the model, we would conclude that there is *no* discrimination, opposite to our model specification.
 
-precis( glm( Y ~ X + E , family=binomial ) )
+```{r discrimEandX}
+pbdX <- glm( Y ~ X , family=binomial )
+pbdXE <- glm( Y ~ X + E , family=binomial )
 
-precis( glm( Y ~ X + E + Q , family=binomial ) )
+precis( pbdX )
+precis( pbdXE )
+```
 
-mg0 <- glm( Y ~ X , family=binomial )
-mg1 <- glm( Y ~ X + E , family=binomial )
-mg2 <- glm( Y ~ X + E + Q , family=binomial )
-plot( coeftab( mg0 , mg1 ) , pars="X" )
+For a moment, we assume that Q can be observed. Adding it to the model improves the estimate of X, though is not enough to allow the logistic regression model fully recover the amplitude of X (`-1`).
 
-# descendants of Q
+```{r}
+pbdXEQ <- glm( Y ~ X + E + Q , family=binomial )
+precis( pbdXEQ )
+```
+
+As said, `Q` is often not directly observable. We can have descandants of Q, `R1` and `R2` in this case.
+
+```{r qDesc}
 R1 <- rnorm(N,0.5*Q)
 R2 <- rnorm(N,0.5*Q)
 
-mg3 <- glm( Y ~ X + E + R1 + R2 , family=binomial )
-precis( mg3 )
-plot( coeftab( mg0 , mg1 , mg3 ) , pars="X" )
+pbdXER <- glm( Y ~ X + E + R1 + R2 , family=binomial )
+precis( pbdXER )
+```
+We diplsay the coefficients of `X` visually.
 
-# bayes model
+```{r}
+plot( coeftab( pbdX , pbdXE, pbdXEQ, pbdXER) , pars="X" )
+```
+
+## The Bayesian model for the discrimination csae
+
+```{r bayesAgainstDisc}
 dat <- list( Y=Y , E=E , XX=X , id=1:N , R1=R1 , R2=R2 )
-mR <- ulam(
+pbdXERbayes <- ulam(
     alist(
         # Y model
         Y ~ bernoulli(p),
@@ -649,23 +705,31 @@ mR <- ulam(
         R1 ~ normal(Q,1),
         R2 ~ normal(Q,1)
     ) , data=dat , chains=4 , cores=4 , cmdstan=TRUE )
+```
 
-precis(mR,2,omit="Q")
+```{r}
+precis(pbdXERbayes, 2 ,omit="Q")
+```
 
-plot( coeftab( mg0 , mg1 , mg3 , mR ) , pars="X" )
+```{r}
+plot( coeftab( pbdX , pbdXE , pbdXER , pbdXERbayes ) , pars="X" )
+```
 
-post <- extract.samples(mR)
+```{r pbXERbayesPost}
+post <- extract.samples(pbdXERbayes)
 Qest <- apply(post$Q,2,mean)
-blank()
-plot(Q,Qest)
-abline(a=0,b=1,lty=2)
+{
+  plot(Q,Qest)
+  abline(a=0,b=1,lty=2)
+}
+```
 
-# confounded but we do a partial identification analysis
-# we use an informative prior for h (effect of Q)
+A partial identification analysis: we assume that `Y` is affected by `E`, `X`, and `Q`, and we model `Q` as a latent Gaussian variable. We let `g` represent the coefficients of `X`. And we use an informative prior for `h`, i.e. effect of `Q`.
 
-dat2 <- list( Y=Y , E=E , I=I , id=1:N )
+```{r pbdXEBayes2}
+dat2 <- list( Y=Y , E=E , X=X, id=1:N )
 
-m2 <- ulam(
+pbdXEbayes2 <- ulam(
     alist(
         # Y model
         Y ~ bernoulli(p),
@@ -675,23 +739,32 @@ m2 <- ulam(
         h ~ uniform(0,2),
         # Q model
         vector[id]:Q ~ normal(0,1)
-    ) , data=dat2 , chains=4 , cores=4 )
+    ) , data=dat2 , chains=4 , cores=4, cmdstan = TRUE)
 
-precis(m2,2,omit="Q")
+precis(pbdXEbayes2,2,omit="Q")
+```
 
-post <- extract.samples(m2)
+We retrieve samples from posterior distribution again.
 
-plot( post$h , post$g , pch=16 , col=grau(0.2) , cex=2 , ylab="effect of I" , xlab="effect of Q" )
-abline(h=0,lty=2)
+```{r}
+post <- extract.samples(pbdXEbayes2)
 
+{
+  plot( post$h , post$g , pch=16 , col=grau(0.2) , cex=2 , ylab="effect of X" , xlab="effect of Q" )
+  abline(h=0,lty=2)
+}
 quantile(post$h)
+```
 
-############################
-# d-separation plots
+
+# Plots for d-seperation
+
+```{r dsepSetup}
 a <- 0.7
 cols <- c( col.alpha(1,a) , col.alpha(2,a) )
+```
 
-# pipe
+```{r dsepPipe}
 
 N <- 1000
 X <- rnorm(N)
@@ -702,9 +775,8 @@ plot( X , Y , col=cols[Z+1] , pch=16 )
 abline(lm(Y[Z==1]~X[Z==1]),col=2,lwd=3)
 abline(lm(Y[Z==0]~X[Z==0]),col=1,lwd=3)
 abline(lm(Y~X),lwd=3,lty=3)
-
-# fork
-
+```
+```{r dsepFork}
 N <- 1000
 Z <- rbern(N)
 X <- rnorm(N,2*Z-1)
@@ -714,9 +786,9 @@ plot( X , Y , col=cols[Z+1] , pch=16 )
 abline(lm(Y[Z==1]~X[Z==1]),col=2,lwd=3)
 abline(lm(Y[Z==0]~X[Z==0]),col=1,lwd=3)
 abline(lm(Y~X),lwd=3,lty=3)
+```
 
-# collider
-
+```{r dsepCollider}
 N <- 1000
 X <- rnorm(N)
 Y <- rnorm(N)
