export figures in PDF files under figures/

--- a/2021-12-CausalSalad.Rmd
+++ b/2021-12-CausalSalad.Rmd
@@ -13,7 +13,9 @@ This document walks through the models introduced in the causal inference worksh
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       fig.height = 4, 
-                      fig.width = 4)
+                      fig.width = 4,
+                      fig.path = "figures/",
+                      dev = c("png", "pdf"))
 library(ribiosUtils)
 library(ribiosIO)
 library(rethinking)
